# nanobot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
nanobot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  task_store.py  token_budget.py
nanobot/agent/evolution/: __init__.py  engine.py
nanobot/agent/memory/: __init__.py  base.py  extractor.py  graph.py  graph_store.py  linker.py  retriever.py  store.py  timeline.py
nanobot/agent/tools/: skill_manager.py  tool_manager.py  web.py  workspace_runtime.py
nanobot/channels/: telegram.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
nanobot/providers/: __init__.py  base.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py  volcengine_provider.py
nanobot/session/: __init__.py  sqlite_store.py  store.py  task_store.py
nanobot/skills/: README.md
nanobot/skills/daily-review/: SKILL.md
nanobot/skills/restart/: SKILL.md
nanobot/skills/restart/scripts/: restart.sh
nanobot/skills/self-evolution/: SKILL.md
nanobot/templates/: AGENTS.md  SOUL.md  TOOLS.md
nanobot/templates/memory/: MEMORY.md
