[project]
name = "nanobot"
version = "0.1.4"
description = "A lightweight AI agent framework with multi-channel support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jingcheng", email = "jingcheng@example.com" }
]
keywords = ["ai", "agent", "llm", "telegram", "discord"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI & UI
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.0",

    # Configuration
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # Logging
    "loguru>=0.7.0",

    # HTTP & Async
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "websockets>=12.0",

    # AI Providers
    "openai>=1.12.0",
    "litellm>=1.40.0",

    # Optional: Token counting
    "tiktoken>=0.7.0",

    # Channel integrations
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "slack-sdk>=3.24.0",
    "lark-oapi>=1.0.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Utilities
    "oauth-cli-kit>=0.1.0",
    "json-repair>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
nanobot = "nanobot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]